# travel-wise

./: .coverage  .gitignore
collector/: .env  JapanTravel_2025-03-11 19:34.json  JapanTravel_2025-03-11 19:35.json  KoreaTravel_2025-03-11 19:35.json  README.md  koreaTravel_2025-03-11 19:34.json  pyproject.toml
collector/collector/: main.py
collector/src/: main.py
collector/src/collectors/: collector.py  reddit_collector.py
collector/src/storage/: local_storage.py  storage.py
collector/tests/: test_main.py
collector/tests/collectors/: test_collector.py  test_reddit_collector.py
collector/tests/storage/: test_local_storage.py
loader/: .coverage.loader  comments_JapanTravel_2025-03-17 01:24_page_1.json  comments_JapanTravel_2025-03-17 01:24_page_2.json  dummy_japan.json  posts_JapanTravel_2025-03-17 01:24_page_1.json  pyproject.toml
loader/dummy_data/: dummy_japan_two.json
loader/src/: main.py
loader/src/fs_access/: base_fs_access.py
loader/src/loaders/: base_loader.py  loader.py
loader/src/writers/: base_writer.py
loader/tests/: test_main.py
loader/tests/loaders/: test_base_loader.py
loader/tests/writers/: test_base_writer.py
server/: .env  Dockerfile  entrypoint.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 04fcbee53a8a_add_location_name_and_characteristic_to_.py  33665cdcde15_initial_migration.py  3560e3821ee1_add_location_name_and_characteristic_to_.py  5d49ba540bdd_add_country_column_to_post_table.py  950edbb408a3_location_fields_shuold_not_be_nullable.py  adc9bc876117_add_comment_summary_column.py  e36356c26061_initial_migration.py  (+1 more)
server/server/: main.py
server/src/: main.py  routes.py
server/src/database/: base.py  (+3 more)
server/tests/: conftest.py  test_app.py  test_main.py
transformer/: JapanTravel_2025-02-10 22:29.json  JapanTravel_2025-02-16 21:32.json  README.md  pyproject.toml
transformer/fine_tuning/: fine_tune_gpt.py  train_data.jsonl
transformer/raw_data/: JapanTravel_2025-03-11 21:03.json  KoreaTravel_2025-03-11 21:03.json  comments_JapanTravel_2025-03-17 01:24_page_1.json  comments_JapanTravel_2025-03-17 01:24_page_2.json  comments_JapanTravel_2025-03-17 20:50_page_1.json  comments_JapanTravel_2025-03-17 20:50_page_2.json  comments_JapanTravel_2025-03-17 20:50_page_3.json  comments_JapanTravel_2025-03-17 20:50_page_4.json  comments_JapanTravel_2025-03-17 20:50_page_5.json  comments_KoreaTravel_2025-03-17 01:24_page_1.json  comments_KoreaTravel_2025-03-17 20:50_page_1.json  comments_KoreaTravel_2025-03-17 20:50_page_2.json  comments_KoreaTravel_2025-03-17 20:50_page_3.json  comments_KoreaTravel_2025-03-17 20:50_page_4.json  comments_KoreaTravel_2025-03-17 20:50_page_5.json  posts_JapanTravel_2025-03-17 01:24_page_1.json  posts_JapanTravel_2025-03-17 20:50_page_1.json  posts_KoreaTravel_2025-03-17 01:24_page_1.json  posts_KoreaTravel_2025-03-17 20:50_page_1.json
transformer/src/: main.py
transformer/transformed_data/: JapanTravel_2025-02-16 21:32.json  JapanTravel_2025-03-11 21:03.json  KoreaTravel_2025-03-11 21:03.json  comments_JapanTravel_2025-03-17 20:50_page_1.json  comments_JapanTravel_2025-03-17 20:50_page_2.json  comments_JapanTravel_2025-03-17 20:50_page_3.json  comments_JapanTravel_2025-03-17 20:50_page_4.json  comments_JapanTravel_2025-03-17 20:50_page_5.json  comments_KoreaTravel_2025-03-17 01:24_page_1.json  comments_KoreaTravel_2025-03-17 20:50_page_1.json  comments_KoreaTravel_2025-03-17 20:50_page_2.json  comments_KoreaTravel_2025-03-17 20:50_page_3.json  comments_KoreaTravel_2025-03-17 20:50_page_4.json  comments_KoreaTravel_2025-03-17 20:50_page_5.json  japantestdata.json  koreaTravel_2025-03-11 19:34.json  koreatestdata.json  posts_JapanTravel_2025-03-17 20:50_page_1.json  posts_KoreaTravel_2025-03-17 01:24_page_1.json  posts_KoreaTravel_2025-03-17 20:50_page_1.json
(+138 files in other folders)
