[project]
name = "collector"
version = "0.1.0"
description = ""
authors = [
    {name = "Gerald Neo",email = "gerald.ner56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "praw (>=7.8.1,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.9.4,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "travelwise-common (==0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.scripts]
start = "src.main:main"

[tool.poetry]
packages = [{include = "*", from="src"}]