[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Gerald Neo",email = "gerald.ner56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "ruff (>=0.9.1,<0.10.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"

[tool.poetry]
packages = [{include = "*", from="src"}]
