[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Gerald Neo",email = "gerald.ner56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.9.1,<0.10.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "cloud-sql-python-connector[pg8000] (>=1.17.0,<2.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "travelwise-common (>=0.7.0,<0.8.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"

[tool.poetry]
packages = [{include = "*", from="src"}]
